--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -27,11 +27,11 @@
         </LinearLayout>
 
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="120dp"
+            android:layout_width="121dp"
+            android:layout_height="126dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="110dp"
-            android:background="@drawable/logo" />
+            android:background="@drawable/ic_action_train" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
