--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -121,7 +121,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/angle"
-                android:text="Create"
+                android:text="@string/createAccount"
                 android:textSize="16dp"
                 android:textColor="#fff"
                 android:gravity="center"
