--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="16dp"
-                android:text="Settings"
+                android:text="@string/settings"
                 android:textColor="#fff"
                 android:textSize="22dp" />
         </LinearLayout>
@@ -113,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="16dp"
-                android:text="Help"
+                android:text="@string/help"
                 android:textColor="#fff"
                 android:textSize="22dp" />
         </LinearLayout>
@@ -152,7 +152,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="16dp"
-                android:text="Logout"
+                android:text="@string/logout"
                 android:textColor="#fff"
                 android:textSize="22dp" />
         </LinearLayout>
@@ -192,7 +192,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="16dp"
-                android:text="Train Tracker"
+                android:text="@string/app_name"
                 android:textColor="#fff"
                 android:textSize="22dp" />
         </LinearLayout>
