--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
                 android:hint="Email"
                 android:inputType="text"
                 android:padding="16dp"
+                android:text="harithsankala@gmail.com"
                 android:textColor="#ADCCE2"
                 android:textColorHint="#ADCCE2"
                 android:textSize="16dp" />
@@ -57,6 +58,7 @@
                 android:inputType="textPassword"
                 android:maxLength="12"
                 android:padding="16dp"
+                android:text="harithaaa"
                 android:textColor="#ADCCE2"
                 android:textColorHint="#ADCCE2"
                 android:textSize="16dp" />
@@ -77,11 +79,11 @@
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginRight="40dp"
-                android:layout_marginBottom="28dp"
+                android:layout_marginBottom="25dp"
                 android:background="@drawable/angle"
                 android:gravity="center"
                 android:padding="16dp"
-                android:text="Sign In"
+                android:text="@string/signin"
                 android:textColor="#fff"
                 android:textSize="16dp" />
         </LinearLayout>
@@ -95,7 +97,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="79dp"
             android:gravity="center"
-            android:text="Sign UP"
+            android:text="@string/signup"
             android:textColor="#54abee"
             android:textSize="25dp" />
 
@@ -109,8 +111,21 @@
             android:layout_marginBottom="126dp"
             android:gravity="center"
             android:paddingBottom="16dp"
-            android:text="No account yet? Create one"
+            android:text="@string/noAccountYet"
             android:textColor="#c4c5c9"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="255dp"
+            android:gravity="center"
+            android:paddingBottom="16dp"
+            android:text=""
+            android:textColor="#990000"
             android:textSize="16dp" />
 
         <LinearLayout
@@ -150,7 +165,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="16dp"
-                android:text="Train Tracker"
+                android:text="@string/app_name"
                 android:textColor="#fff"
                 android:textSize="22dp" />
         </LinearLayout>
