--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -92,7 +92,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="16dp"
-                    android:text="View Current Location"
+                    android:text="@string/menu1"
                     android:textColor="#fff"
                     android:textSize="22dp" />
             </LinearLayout>
@@ -133,7 +133,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="16dp"
-                    android:text="View Arrival Times"
+                    android:text="@string/menu2"
                     android:textColor="#fff"
                     android:textSize="22dp" />
             </LinearLayout>
@@ -174,7 +174,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="16dp"
-                    android:text="View Train schedule"
+                    android:text="@string/menu3"
                     android:textColor="#fff"
                     android:textSize="22dp" />
             </LinearLayout>
@@ -189,9 +189,21 @@
                 android:layout_marginEnd="36dp"
                 android:background="#0000"
                 android:drawableRight="@drawable/ic_action_train"
-                android:hint="Select Train"
+                android:text="Train-1"
                 android:textColor="#ADCCE2"
                 android:textColorHint="#ADCCE2" />
+
+            <TextView
+                android:id="@+id/error_message"
+                android:layout_width="333dp"
+                android:layout_height="47dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="260dp"
+                android:layout_marginEnd="36dp"
+                android:background="#0000"
+                android:text=""
+                android:textColor="#990000" />
 
         </RelativeLayout>
 
