--- a/app/src/main/res/layout/activity_train_schedule.xml
+++ b/app/src/main/res/layout/activity_train_schedule.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".TrainSchedule">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/img"
@@ -52,14 +51,78 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/view_options"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="239dp"
-            android:text="Train Schecule"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </FrameLayout>>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#fff">
+            <TableLayout
+                android:layout_marginTop="10dp"
+                android:id="@+id/table"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="22dp"
+                android:layout_marginRight="22dp">
+
+                <TableRow
+                    android:id="@+id/table_row1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:id="@+id/depart"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="serif"
+                        android:text="Depart"
+                        android:textColor="#000" />
+
+                    <TextView
+                        android:id="@+id/arrive"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="serif"
+                        android:text="Arrive"
+                        android:textColor="#000" />
+
+                    <TextView
+                        android:id="@+id/duration"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="serif"
+                        android:text="Duration"
+                        android:textColor="#000" />
+
+                    <TextView
+                        android:id="@+id/type"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="serif"
+                        android:text="Type"
+                        android:textColor="#000" />
+
+                </TableRow>
+                <View
+                    android:layout_height="3dip"
+                    android:layout_width="match_parent"
+                    android:background="#010649"/>
+            </TableLayout>
+            // add a listview to display our table records
+            <ListView
+                android:id="@+id/records_view"
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:layout_marginTop="16dp">
+            </ListView>
+        </LinearLayout>
+
+    </FrameLayout>
+
 </android.support.constraint.ConstraintLayout>
