--- a/app/src/main/res/layout/activity_view_v.xml
+++ b/app/src/main/res/layout/activity_view_v.xml
@@ -58,13 +58,13 @@
                 android:id="@+id/id1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Current Location" />
+                android:text="@string/currentLocation" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/id2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Expected Times" />
+                android:text="@string/expectedTimes" />
 
         </android.support.design.widget.TabLayout>
     </LinearLayout>
