--- a/app/src/main/res/layout/activity_share_location.xml
+++ b/app/src/main/res/layout/activity_share_location.xml
@@ -37,7 +37,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="350dp"
+            android:layout_marginTop="250dp"
             android:orientation="vertical">
 
             <customfonts.MyEditText
@@ -71,11 +71,27 @@
                 android:layout_marginBottom="28dp"
                 android:background="@drawable/angle"
                 android:gravity="center"
+                android:onClick="shareLocation"
                 android:padding="16dp"
                 android:text="@string/share"
                 android:textColor="#fff"
-                android:textSize="16dp"
-                android:onClick="shareLocation"/>
+                android:textSize="16dp" />
+
+            <customfonts.MyTextView
+                android:id="@+id/coordinates"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="130dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="28dp"
+                android:background="@drawable/angle"
+                android:gravity="center"
+                android:onClick="shareLocation"
+                android:padding="16dp"
+                android:text="@string/share"
+                android:textColor="#fff"
+                android:textSize="16dp" />
 
         </LinearLayout>
 
