--- a/app/src/main/res/layout/activity_share_location.xml
+++ b/app/src/main/res/layout/activity_share_location.xml
@@ -71,7 +71,7 @@
                 android:layout_marginBottom="28dp"
                 android:background="@drawable/angle"
                 android:gravity="center"
-                android:onClick="shareLocation"
+                android:onClick="startShareLocation"
                 android:padding="16dp"
                 android:text="@string/share"
                 android:textColor="#fff"
@@ -87,7 +87,7 @@
                 android:layout_marginBottom="28dp"
                 android:background="@drawable/angle"
                 android:gravity="center"
-                android:onClick="shareLocation"
+                android:onClick="stopShareLocation"
                 android:padding="16dp"
                 android:text="@string/share"
                 android:textColor="#fff"
