--- a/app/src/main/res/layout/activity_share_location.xml
+++ b/app/src/main/res/layout/activity_share_location.xml
@@ -89,7 +89,7 @@
                 android:gravity="center"
                 android:onClick="stopShareLocation"
                 android:padding="16dp"
-                android:text="@string/share"
+                android:text="Stop"
                 android:textColor="#fff"
                 android:textSize="16dp" />
 
