--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
                 android:hint="Email"
                 android:inputType="text"
                 android:padding="16dp"
-                android:text="harithsankala@gmail.com"
+                android:text="thilankakh@gmail.com"
                 android:textColor="#ADCCE2"
                 android:textColorHint="#ADCCE2"
                 android:textSize="16dp" />
@@ -58,7 +58,7 @@
                 android:inputType="textPassword"
                 android:maxLength="12"
                 android:padding="16dp"
-                android:text="harithaaa"
+                android:text="isuri"
                 android:textColor="#ADCCE2"
                 android:textColorHint="#ADCCE2"
                 android:textSize="16dp" />
