--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/coordinatorLayout"
     android:layout_height="match_parent"
     android:background="@drawable/img"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
     <RelativeLayout
@@ -34,7 +36,7 @@
                 android:hint="Email"
                 android:inputType="text"
                 android:padding="16dp"
-                android:text="thilankakh@gmail.com"
+                android:text="example@example.com"
                 android:textColor="#ADCCE2"
                 android:textColorHint="#ADCCE2"
                 android:textSize="16dp" />
@@ -58,7 +60,7 @@
                 android:inputType="textPassword"
                 android:maxLength="12"
                 android:padding="16dp"
-                android:text="isuri"
+                android:text="password"
                 android:textColor="#ADCCE2"
                 android:textColorHint="#ADCCE2"
                 android:textSize="16dp" />
@@ -84,6 +86,7 @@
                 android:gravity="center"
                 android:padding="16dp"
                 android:text="@string/signin"
+                android:onClick="signIn"
                 android:textColor="#fff"
                 android:textSize="16dp" />
         </LinearLayout>
@@ -101,6 +104,15 @@
             android:textColor="#54abee"
             android:textSize="25dp" />
 
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="283dp"
+            android:progressDrawable="@drawable/circle"
+            android:visibility="invisible"/>
 
         <TextView
             android:id="@+id/account"
@@ -170,4 +182,4 @@
                 android:textSize="22dp" />
         </LinearLayout>
     </RelativeLayout>
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
