--- a/app/src/main/res/layout/activity_train_schedule.xml
+++ b/app/src/main/res/layout/activity_train_schedule.xml
@@ -73,6 +73,15 @@
                     android:padding="10dp">
 
                     <TextView
+                        android:id="@+id/train_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="serif"
+                        android:text="Train ID"
+                        android:textColor="#000" />
+
+                    <TextView
                         android:id="@+id/depart"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
