--- a/app/src/main/res/layout/activity_share_location.xml
+++ b/app/src/main/res/layout/activity_share_location.xml
@@ -66,29 +66,26 @@
                 android:id="@+id/share"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:layout_marginLeft="130dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="28dp"
                 android:background="@drawable/angle"
                 android:gravity="center"
-                android:onClick="startShareLocation"
                 android:padding="16dp"
                 android:text="@string/share"
                 android:textColor="#fff"
-                android:textSize="16dp" />
+                android:textSize="16dp"
+                android:enabled="false"/>
 
             <customfonts.MyTextView
                 android:id="@+id/coordinates"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:layout_marginLeft="130dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="28dp"
                 android:background="@drawable/angle"
                 android:gravity="center"
-                android:onClick="stopShareLocation"
                 android:padding="16dp"
                 android:text="Stop"
                 android:textColor="#fff"
