--- a/app/src/main/res/layout/activity_train_schedule.xml
+++ b/app/src/main/res/layout/activity_train_schedule.xml
@@ -4,134 +4,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/img"
     tools:context=".TrainSchedule">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/img"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_editor_absoluteX="161dp">
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="371dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="46dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/sback"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="46dp"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_gravity="center"
+            android:padding="10dp"
+            android:src="@drawable/left" />
 
-            <ImageView
-                android:id="@+id/sback"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:padding="10dp"
-                android:src="@drawable/left" />
+        <ImageView
+            android:id="@+id/share"
+            android:layout_width="wrap_content"
+            android:layout_height="29dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="200dp"
+            android:src="@drawable/ic_action_share" />
 
-            <ImageView
-                android:id="@+id/share"
-                android:layout_width="wrap_content"
-                android:layout_height="29dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="200dp"
-                android:src="@drawable/ic_action_share" />
+        <ImageView
+            android:id="@+id/home"
+            android:layout_width="wrap_content"
+            android:layout_height="29dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="70dp"
+            android:src="@drawable/ic_action_home" />
 
-            <ImageView
-                android:id="@+id/home"
-                android:layout_width="wrap_content"
-                android:layout_height="29dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="70dp"
-                android:src="@drawable/ic_action_home" />
+    </LinearLayout>
 
-        </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="600dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="16dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="100dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#fff">
-            <TableLayout
-                android:layout_marginTop="10dp"
-                android:id="@+id/table"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="22dp">
-
-                <TableRow
-                    android:id="@+id/table_row1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:id="@+id/train_id"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="serif"
-                        android:text="Train ID"
-                        android:textColor="#000" />
-
-                    <TextView
-                        android:id="@+id/depart"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="serif"
-                        android:text="Depart"
-                        android:textColor="#000" />
-
-                    <TextView
-                        android:id="@+id/arrive"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="serif"
-                        android:text="Arrive"
-                        android:textColor="#000" />
-
-                    <TextView
-                        android:id="@+id/duration"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="serif"
-                        android:text="Duration"
-                        android:textColor="#000" />
-
-                    <TextView
-                        android:id="@+id/type"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="serif"
-                        android:text="Type"
-                        android:textColor="#000" />
-
-                </TableRow>
-                <View
-                    android:layout_height="3dip"
-                    android:layout_width="match_parent"
-                    android:background="#010649"/>
-            </TableLayout>
-            // add a listview to display our table records
-            <ListView
-                android:id="@+id/records_view"
-                android:layout_width="match_parent"
-                android:layout_height="500dp"
-                android:layout_marginTop="16dp">
-            </ListView>
-        </LinearLayout>
-
-    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
