--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -42,7 +42,7 @@
                 android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="isuri"
+                android:hint="Username"
                 android:textColorHint="#ADCCE2"
                 android:textColor="#ADCCE2"
                 android:layout_marginLeft="22dp"
@@ -61,7 +61,7 @@
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="thilankakh@gmail.com"
+                android:hint="Email"
                 android:textColorHint="#ADCCE2"
                 android:textColor="#ADCCE2"
                 android:layout_marginLeft="22dp"
@@ -80,7 +80,7 @@
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="isuri"
+                android:hint="Password"
                 android:textColorHint="#ADCCE2"
                 android:layout_marginLeft="22dp"
                 android:inputType="textPassword"
@@ -100,7 +100,7 @@
                 android:id="@+id/password_re-entered"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="isuri"
+                android:hint="Confiremed Password"
                 android:textColorHint="#ADCCE2"
                 android:layout_marginLeft="22dp"
                 android:inputType="textPassword"
