--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -57,86 +57,119 @@
             android:background="@drawable/timg">
 
             <LinearLayout
-                android:id="@+id/current_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="0dp"
-                android:layout_marginTop="354dp"
-                android:background="@drawable/circleangle"
-                android:orientation="horizontal"
-                android:padding="16dp">
-
-                <FrameLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="1dp">
-
-                    <ImageView
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:src="@drawable/angle2" />
-
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_gravity="center"
-                        android:paddingLeft="3dp"
-                        android:src="@drawable/ic_action_location" />
-                </FrameLayout>
-
-                <customfonts.MyTextView
+                android:layout_marginTop="130dp"
+                android:orientation="vertical">
+                <AutoCompleteTextView
+                    android:id="@+id/from_station"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="16dp"
-                    android:text="@string/menu1"
-                    android:textColor="#fff"
-                    android:textSize="22dp" />
-            </LinearLayout>
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginRight="35dp"
+                    android:background="#0000"
+                    android:completionThreshold="1"
+                    android:inputType="text"
+                    android:padding="16dp"
+                    android:hint="From Station"
+                    android:text="COLOMBO FORT"
+                    android:textColor="#ADCCE2"
+                    android:textColorHint="#ADCCE2"
+                    android:textSize="16dp" />
 
-            <LinearLayout
-                android:id="@+id/arrival_times"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="457dp"
-                android:background="@drawable/circleangle"
-                android:orientation="horizontal"
-                android:padding="16dp">
-
-                <FrameLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="1dp">
-
-                    <ImageView
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:src="@drawable/angle2" />
-
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_gravity="center"
-                        android:paddingLeft="3dp"
-                        android:src="@drawable/ic_action_times" />
-                </FrameLayout>
-
-                <customfonts.MyTextView
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp"
+                    android:background="#ADCCE2" />
+                <AutoCompleteTextView
+                    android:id="@+id/to_station"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="16dp"
-                    android:text="@string/menu2"
-                    android:textColor="#fff"
-                    android:textSize="22dp" />
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginRight="35dp"
+                    android:background="#0000"
+                    android:inputType="text"
+                    android:padding="16dp"
+                    android:hint="To Station"
+                    android:text="MATARA"
+                    android:textColor="#ADCCE2"
+                    android:textColorHint="#ADCCE2"
+                    android:textSize="16dp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp"
+                    android:background="#ADCCE2" />
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginRight="35dp"
+                    android:background="#0000"
+                    android:hint="Date"
+                    android:inputType="text"
+                    android:padding="16dp"
+                    android:textColor="#ADCCE2"
+                    android:textColorHint="#ADCCE2"
+                    android:textSize="16dp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp"
+                    android:background="#ADCCE2" />
+
+                <EditText
+                    android:id="@+id/start_time"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginRight="35dp"
+                    android:background="#0000"
+                    android:inputType="time"
+                    android:padding="16dp"
+                    android:hint="Start Time"
+                    android:textColor="#ADCCE2"
+                    android:textColorHint="#ADCCE2" />
+
+                <View
+                    android:layout_width="180dp"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp"
+                    android:background="#ADCCE2" />
+
+                <EditText
+                    android:id="@+id/end_time"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginRight="35dp"
+                    android:background="#0000"
+                    android:inputType="time"
+                    android:padding="16dp"
+                    android:hint="End Time"
+                    android:textColor="#ADCCE2"
+                    android:textColorHint="#ADCCE2" />
+
+                <View
+                    android:layout_width="180dp"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp"
+                    android:background="#ADCCE2" />
+
             </LinearLayout>
+
 
             <LinearLayout
                 android:id="@+id/train_shedule"
@@ -145,7 +178,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="0dp"
-                android:layout_marginTop="559dp"
+                android:layout_marginTop="457dp"
                 android:background="@drawable/circleangle"
                 android:orientation="horizontal"
                 android:padding="16dp">
@@ -179,31 +212,47 @@
                     android:textSize="22dp" />
             </LinearLayout>
 
-            <EditText
-                android:id="@+id/selected_train"
-                android:layout_width="333dp"
-                android:layout_height="47dp"
+            <LinearLayout
+                android:id="@+id/current_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="199dp"
-                android:layout_marginEnd="36dp"
-                android:background="#0000"
-                android:drawableRight="@drawable/ic_action_train"
-                android:text="Train-1"
-                android:textColor="#ADCCE2"
-                android:textColorHint="#ADCCE2" />
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="559dp"
+                android:background="@drawable/circleangle"
+                android:orientation="horizontal"
+                android:padding="16dp">
 
-            <TextView
-                android:id="@+id/error_message"
-                android:layout_width="333dp"
-                android:layout_height="47dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="260dp"
-                android:layout_marginEnd="36dp"
-                android:background="#0000"
-                android:text=""
-                android:textColor="#990000" />
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="1dp">
+
+                    <ImageView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:src="@drawable/angle2" />
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:paddingLeft="3dp"
+                        android:src="@drawable/ic_action_location" />
+                </FrameLayout>
+
+                <customfonts.MyTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/menu1"
+                    android:textColor="#fff"
+                    android:textSize="22dp" />
+            </LinearLayout>
+
 
         </RelativeLayout>
 
