--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,48 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="150dp"
+    android:layout_marginTop="8dp">
 
     <android.support.v7.widget.CardView
-        android:layout_width="322dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="45dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#00000000"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/text_view_type"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Heading" />
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2">
 
-            <TextView
-                android:id="@+id/text_view_deatails"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Intro" />
+                <ImageView
+                    android:id="@+id/train_icon"
+                    android:layout_width="62dp"
+                    android:layout_height="57dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="24dp"
+                    android:src="@drawable/ic_action_train_dark" />
+                <TextView
+                    android:id="@+id/train_state"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Intro"
+                    android:layout_below="@id/train_icon"
+                    android:layout_centerHorizontal="true"/>
+                <TextView
+                    android:id="@+id/text_view_deatails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Intro"
+                    android:layout_below="@id/train_state"
+                    android:layout_centerHorizontal="true"/>
+            </RelativeLayout>
 
-            <TextView
-                android:id="@+id/text_view_from"
-                android:layout_width="match_parent"
+            <RelativeLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Intro" />
+                android:layout_weight="3"
+                android:layout_marginTop="24dp">
+                    <TextView
+                        android:id="@+id/text_view_type"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Heading" />
+                    <TextView
+                        android:id="@+id/text_view_from"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Intro"
+                        android:layout_below="@id/text_view_type"/>
+                    <TextView
+                        android:id="@+id/text_view_to"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Intro"
+                        android:layout_below="@id/text_view_from"/>
 
-            <TextView
-                android:id="@+id/text_view_to"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Intro" />
+            </RelativeLayout>
+
 
         </LinearLayout>
+
 
     </android.support.v7.widget.CardView>
 
