--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:background="@drawable/background">
 
 
@@ -34,9 +36,9 @@
                 android:background="#0000"
                 android:drawableRight="@drawable/user"
                 android:hint="Email"
-                android:text="example@example.com"
                 android:inputType="text"
                 android:padding="16dp"
+                android:text="example@example.com"
                 android:textColor="#ADCCE2"
                 android:textColorHint="#ADCCE2"
                 android:textSize="16dp" />
@@ -57,10 +59,10 @@
                 android:background="#0000"
                 android:drawableRight="@drawable/pasword"
                 android:hint="Password"
-                android:text="example"
                 android:inputType="textPassword"
                 android:maxLength="12"
                 android:padding="16dp"
+                android:text="example"
                 android:textColor="#ADCCE2"
                 android:textColorHint="#ADCCE2"
                 android:textSize="16dp" />
@@ -84,9 +86,9 @@
                 android:layout_marginBottom="25dp"
                 android:background="@drawable/angle"
                 android:gravity="center"
+                android:onClick="signIn"
                 android:padding="16dp"
                 android:text="@string/signin"
-                android:onClick="signIn"
                 android:textColor="#fff"
                 android:textSize="16dp" />
         </LinearLayout>
@@ -112,7 +114,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="283dp"
             android:progressDrawable="@drawable/circle"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/account"
