--- a/app/src/main/res/layout/activity_view_v.xml
+++ b/app/src/main/res/layout/activity_view_v.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
@@ -24,27 +24,12 @@
             android:padding="10dp"
             android:src="@drawable/left" />
 
-        <ImageView
-            android:id="@+id/share"
-            android:layout_width="29dp"
-            android:layout_height="29dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="250dp"
-            android:src="@drawable/ic_action_share" />
-
-        <ImageView
-            android:id="@+id/home"
-            android:layout_width="wrap_content"
-            android:layout_height="29dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
-            android:src="@drawable/ic_action_home" />
-
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/tabs_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingTop="60dp">
 
         <android.support.design.widget.TabLayout
@@ -72,8 +57,10 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="750dp"
-        android:layout_marginTop="150dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="4dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/tabs_container"/>
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
