--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="150dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="8dp">
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -35,30 +36,23 @@
                     android:layout_marginTop="24dp"
                     android:src="@drawable/ic_action_train_dark" />
                 <TextView
-                    android:id="@+id/train_state"
+                    android:id="@+id/text_view_deatails"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Intro"
                     android:layout_below="@id/train_icon"
                     android:layout_centerHorizontal="true"/>
-                <TextView
-                    android:id="@+id/text_view_deatails"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Intro"
-                    android:layout_below="@id/train_state"
-                    android:layout_centerHorizontal="true"/>
 
                 <android.support.v7.widget.CardView
-                    android:id="@+id/running_badge"
+                    android:id="@+id/train_state_card"
                     android:layout_width="wrap_content"
-                    android:layout_height="20dp"
+                    android:layout_height="wrap_content"
                     android:layout_below="@id/text_view_deatails"
                     android:layout_centerHorizontal="true"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="10dp"
                     app:cardBackgroundColor="@android:color/holo_blue_dark"
-                    android:visibility="gone">
+                    android:visibility="visible">
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -71,7 +65,8 @@
                             android:paddingStart="8dp"
                             android:paddingEnd="8dp"
                             android:gravity="center"
-                            android:textSize="12sp"/>
+                            android:textSize="16sp"
+                            android:id="@+id/train_state"/>
                     </RelativeLayout>
                 </android.support.v7.widget.CardView>
             </RelativeLayout>
